# auto-role-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  pre-commit
.sqlx/: query-00997166dc889a995a6e8922a78e29e341110cff106d154505381a998b21e081.json  query-0905c8936f976222e6b7e11a4e6a7a5e9ac20cbfb053197432f587c6bb6fa38d.json  query-0b72755efa229a38072d72c822a76dfefc1e80a7a8f59e124bf7928e1bb291cc.json  query-2511d57368d16b9ca1f4757aaffc0dc02a02ba6c896111c70b9060c8e847d7fb.json  query-4a33bbb884c71383b52ea3b391c7980992bf16931b15de1851296d0b6efc9cc0.json  query-adc4b90ad3d391b39768d1a80b8d956c55ef2a82a052aee34972eef59ea25116.json  query-b59feaf373ebcd92517db45c73353edcbd471ffbe7dc368cf6c85e6f405adff6.json  query-bd6f5816126f73f2c93573a4cea0b840e0e6e8074d706236c627c622a4199add.json  query-e2ed7a99d66c94fa5f4d458204e3462f4793160730a7f5f44390d635a342054f.json  query-fbf7a063e2c20b163acf8e0bde25671282a67089567ee6efbdf113e22190e111.json
migrations/: 20240829080507_initial.down.sql  20240829080507_initial.up.sql
src/: db.rs  logger.rs  main.rs  state.rs
src/commands/: admin.rs  link.rs  mod.rs  prelude.rs  role.rs  sync.rs  unlink.rs
